[package]
name = "beej-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2.153"
nix = { version = "0.28.0", features = ["net", "poll", "signal"] }
socket2 = "0.5.6"
typed-builder = "0.18.2"
